# f1-analytics-lab

./: .env.example  .gitignore  README.md  pyproject.toml
.planning/: BACKLOG.md  LEARNINGS.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  THREADS.md  config.json
.planning/phases/01-proje-iskeleti/: 01-PLAN.md  01-SUMMARY.md  CONTEXT.md  RESEARCH.md  VALIDATION.md  VERIFICATION.md
.planning/phases/02-veri-toplama/: 01-PLAN.md  CONTEXT.md  RESEARCH.md  VALIDATION.md  VERIFICATION.md
.planning/phases/03-veri-temizleme/: 01-PLAN.md  CONTEXT.md  RESEARCH.md  VALIDATION.md  VERIFICATION.md
.planning/phases/04-tyre-degradation/: 01-PLAN.md  CONTEXT.md  RESEARCH.md  VALIDATION.md  VERIFICATION.md
.planning/phases/05-lap-time-prediction/: 01-PLAN.md  CONTEXT.md  RESEARCH.md  VALIDATION.md  VERIFICATION.md
.planning/phases/06-overtake-prediction/: 01-PLAN.md  CONTEXT.md  RESEARCH.md  VALIDATION.md  VERIFICATION.md
.planning/phases/07-pit-strategy-anomaly/: 01-PLAN.md  CONTEXT.md  RESEARCH.md  VALIDATION.md  VERIFICATION.md
.planning/phases/08-benchmark-wandb/: 01-PLAN.md  CONTEXT.md  RESEARCH.md  VALIDATION.md  VERIFICATION.md
.planning/phases/09-yayin/: 01-PLAN.md  CONTEXT.md  RESEARCH.md  VALIDATION.md  VERIFICATION.md
.planning/phases/10-dashboard/: 01-PLAN.md  CONTEXT.md  RESEARCH.md  VALIDATION.md  VERIFICATION.md
configs/: data.yaml  features.yaml  models.yaml  wandb.yaml
docs/: f1-analytics-platform.md
scripts/: build_all_interim.py
src/: __init__.py
src/data/: build_circuits.py  build_drivers.py  build_laps.py  build_sessions.py  build_stints.py  build_track_status.py  build_weather.py  fetch_fastf1.py  validators.py
src/tasks/: __init__.py
src/utils/: __init__.py  config.py  logging.py  paths.py  retry.py  seed.py
src/visualization/: __init__.py
tests/: test_retry.py  test_validators.py
