[project]
name = "f1-analytics-lab"
version = "0.1.0"
description = "F1 telemetry → EDA → outlier analysis → ML benchmarks"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Enes Demir" }]

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "fastf1>=3.0",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "catboost>=1.2",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "plotly>=5.15",
    "wandb>=0.15",
    "jupyter>=1.0",
    "pyarrow>=12.0",
    "pyyaml>=6.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "mypy>=1.8",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["INP001"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = false
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
exclude = ["scripts/"]
files = ["src/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
